feat: blur ladder page in background when picker is open on mobile

--- a/assets/css/_ladder_page.scss
+++ b/assets/css/_ladder_page.scss
@@ -27,6 +27,12 @@ $color-route-tabs-separator: #9fa2ac;
   }
 }
 
+@media screen and (max-width: $mobile-max-width) {
+  .m-ladder-page__tab-bar-and-ladders--picker_container_visible {
+    filter: blur(5px);
+  }
+}
+
 .m-ladder-page__tab-bar-and-ladders {
   height: 100%;
   display: flex;
