--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -53,6 +53,7 @@ $shuttle-picker-width: 12.6rem;
 @import "search_results";
 @import "settings_page";
 @import "shuttle_map";
+@import "shuttle_picker";
 @import "shuttle_picker_container";
 @import "swings_view";
 @import "tab_bar";
