--- a/assets/css/_garage_filter.scss
+++ b/assets/css/_garage_filter.scss
@@ -18,20 +18,32 @@
 
 .m-garage-filter__header {
   border-bottom: 1px solid #d8dde1;
-  padding: 0.75rem 1rem;
+  height: 2.25rem;
+  padding: 0 0.5rem 0 1rem;
   line-height: 1;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .m-garage-filter__show-hide-button {
   @include button-icon(0.68rem);
   transform: rotate(-90deg);
+  width: 1.5rem;
+  height: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   span {
     svg {
-      fill: #4f535f;
+      fill: #525560;
     }
+  }
+
+  &:focus-within {
+    background-color: #ecedee;
+    border-radius: 4px;
   }
 }
 
