--- a/assets/css/_garage_filter.scss
+++ b/assets/css/_garage_filter.scss
@@ -24,6 +24,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
+  user-select: none;
 }
 
 .m-garage-filter__show-hide-button {
