fix: correct border color for route and garage filters

--- a/assets/css/_garage_filter.scss
+++ b/assets/css/_garage_filter.scss
@@ -3,7 +3,7 @@
   font-weight: 400;
   color: #525560;
   background: $white;
-  border: 1px solid #b3b58d;
+  border: 1px solid #b3b5bd;
   border-radius: 6px;
 
   &:hover {
