--- a/assets/css/_route_filter.scss
+++ b/assets/css/_route_filter.scss
@@ -7,7 +7,7 @@
 .m-route-filter__input {
   @include font-small;
   line-height: 1;
-  border: 1px solid #b3b58d;
+  border: 1px solid #b3b5bd;
   border-radius: 6px;
   padding: 0.625rem 1rem;
   color: #3c3f4c;
