feat: allow mobile picker to shrink, leave room for tab

--- a/assets/css/_drawer_tab.scss
+++ b/assets/css/_drawer_tab.scss
@@ -4,7 +4,7 @@
   border-bottom-right-radius: 1rem;
   position: absolute;
   top: 2.5rem;
-  width: 2rem;
+  width: $drawer-tab-width;
 }
 
 .c-drawer-tab__tab-button {
