--- a/assets/css/_garage_filter.scss
+++ b/assets/css/_garage_filter.scss
@@ -19,6 +19,7 @@
 .m-garage-filter__header {
   height: 2.25rem;
   padding: 0 0.5rem 0 1rem;
+  width: 100%;
   line-height: 1;
   display: flex;
   justify-content: space-between;
@@ -28,6 +29,11 @@
 
   &:not(:only-child) {
     border-bottom: 1px solid #d8dde1;
+  }
+
+  &:focus .m-garage-filter__show-hide-button {
+    background-color: #ecedee;
+    border-radius: 4px;
   }
 }
 
@@ -48,11 +54,6 @@
     svg {
       fill: #525560;
     }
-  }
-
-  &:focus-within {
-    background-color: #ecedee;
-    border-radius: 4px;
   }
 }
 
