build(deps): upgrade to Phoenix 1.5

--- a/lib/skate_web/templates/layout/reports.html.eex
+++ b/lib/skate_web/templates/layout/reports.html.eex
@@ -21,7 +21,7 @@
 
     <body>
         <main role="main" class="container">
-            <%= render view_module(@conn), view_template(@conn), assigns %>
+            <%= @inner_content %>
         </main>
     </body>
 </html>
