--- a/lib/skate_web/templates/layout/app.html.eex
+++ b/lib/skate_web/templates/layout/app.html.eex
@@ -33,7 +33,7 @@
 
   <body>
     <main role="main" class="container">
-      <%= render view_module(@conn), view_template(@conn), assigns %>
+      <%= @inner_content %>
     </main>
     <script type="text/javascript" src="<%= static_href.(@conn, "/js/app.js") %>"></script>
     <%= render "_drift.html" %>
