Route picker redesign (#1460)
* refactor: separate containers for shuttle / route pickers

* feat: make route picker wider, with separate mobile width

* feat: background overlay for mobile route picker

* feat: blur ladder page in background when picker is open on mobile

* feat: change background color of route picker

* feat: picker layout changes, route filter input changes

* feat: style route filter "X" icon and input colors

* feat: style garage filter, except for checkboxes

* feat: basic route picker column layout

also separates styles for shuttle picker

* feat: don't show selected routes in left-hand column

* chore: further cleanup to route picker CSS

* fix: make route picker take up full vertical space

* feat: hide X button in route filter when empty

* feat: more styling of route picker buttons

* feat: empty state for selected routes column

* feat: ability to click route picker overlay to close picker

* feat: focus state for garage filter caret

* feat: leave sizing of garage toggles same as before

* feat: focus / hover state for unselected route buttons

* feat: focus / hover states for selected routes, "X" icon

* feat: expand click target area for toggling garage filter

* fix: correct border color for route and garage filters

* fix: remove extraneous test code

* fix: don't show border below filter garages header when collapsed

* fix: correct z-index for left tab bar

* feat: allow mobile picker to shrink, leave room for tab

* feat: new caret icon

* fix: don't round right-hand sides of route containers

* fix: correct button vs. div distinction in garage filter

* feat: rotate caret

* chore: remove extraneous cursor: pointer syling

--- a/assets/css/_garage_filter.scss
+++ b/assets/css/_garage_filter.scss
@@ -1,37 +1,73 @@
 .m-garage-filter {
   @include font-small;
-  color: #6e717d;
+  font-weight: 400;
+  color: #525560;
   background: $white;
-  border: 1px solid #9fa2ac;
-  border-radius: 0.25rem;
+  border: 1px solid #b3b5bd;
+  border-radius: 6px;
+
+  &:hover {
+    border: 1px solid #b58de2;
+  }
+
+  &:focus-within {
+    border: 1px solid #7c47ae;
+    box-shadow: 0px 0px 0px 2px rgba(170, 78, 242, 0.17);
+  }
 }
 
 .m-garage-filter__header {
-  border-bottom: 1px solid #d3d5d9;
-  padding: 0.5rem;
+  height: 2.25rem;
+  padding: 0 0.5rem 0 1rem;
+  width: 100%;
+  line-height: 1;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  user-select: none;
+
+  &:not(:only-child) {
+    border-bottom: 1px solid #d8dde1;
+  }
+
+  &:focus .m-garage-filter__show-hide-button {
+    background-color: #ecedee;
+    border-radius: 4px;
+  }
 }
 
 .m-garage-filter__show-hide-button {
-  @include button-icon(0.68rem);
-  transform: rotate(-90deg);
+  @include button-icon(0.5625rem);
+  transform: rotate(90deg);
+  width: 1.5rem;
+  height: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     svg {
-      fill: #4f535f;
+      fill: #525560;
     }
   }
+}
+
+.m-garage-filter__garages {
+  margin: 0;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
+  color: #3c3f4c;
 }
 
 .m-garage-filter__garage {
   display: flex;
   justify-content: space-between;
-  padding: 0rem 0.5rem 0.5rem;
-
-  &:first-child {
-    padding: 0.75rem 0.5rem 0.5rem;
-  }
 }
 
 .m-garage-filter__button {
