--- a/assets/css/_drawer_tab.scss
+++ b/assets/css/_drawer_tab.scss
@@ -4,7 +4,10 @@
   border-bottom-right-radius: 1rem;
   position: absolute;
   top: 2.5rem;
-  width: 2rem;
+  width: $drawer-tab-width;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .c-drawer-tab__tab-button {
@@ -13,5 +16,16 @@
   font-size: 2rem;
   line-height: 1.5rem;
   margin: 0;
-  padding: 1.5rem 0.555rem 2rem;
+  padding: 2rem 0;
+
+  span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    svg {
+      height: 0.9rem;
+      width: 0.9rem;
+    }
+  }
 }
