--- a/assets/css/_picker_container.scss
+++ b/assets/css/_picker_container.scss
@@ -1,5 +1,5 @@
 .m-picker-container {
-  background-color: $color-bg-medium;
+  background-color: #ecedee;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -7,33 +7,52 @@
   // Required for pinning to the left side of the screen on the tablets
   left: 0;
   padding: 1rem;
+  row-gap: 1rem;
   position: absolute;
   top: inherit;
   transition: $transition-slide;
-  width: $picker-width-narrow;
-  z-index: 1;
-
-  &--wide {
-    width: $picker-width-wide;
-  }
+  width: $route-picker-width;
+  z-index: 100;
 
   &.visible {
     left: 0;
   }
 
   &.hidden {
-    left: -$picker-width-narrow;
-  }
-
-  &--wide.hidden {
-    left: -$picker-width-wide;
+    left: -$route-picker-width;
   }
 }
 
-.m-picker-container--narrow .c-drawer-tab {
-  left: $picker-width-narrow;
+.m-picker-container .c-drawer-tab {
+  left: 100%;
+  background-color: #ecedee;
 }
 
-.m-picker-container--wide .c-drawer-tab {
-  left: $picker-width-wide;
+.m-picker-container-overlay {
+  display: none;
+}
+
+@media screen and (max-width: $mobile-max-width) {
+  .m-picker-container {
+    --picker-container-width: min(
+      #{$mobile-route-picker-width},
+      calc(100% - #{$drawer-tab-width})
+    );
+    width: var(--picker-container-width);
+
+    &.hidden {
+      left: calc(-1 * var(--picker-container-width));
+    }
+  }
+
+  .m-picker-container-overlay {
+    display: initial;
+    z-index: 90;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: rgba(88, 88, 88, 0.23);
+  }
 }
