--- a/assets/css/_route_picker.scss
+++ b/assets/css/_route_picker.scss
@@ -1,92 +1,135 @@
 .m-route-picker {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  row-gap: 1rem;
+  min-height: 0;
 }
 
 .m-route-picker__label {
   @include font-label();
 }
 
-.m-route-picker__selected-routes {
-  display: flex;
-  flex: 0 0 auto;
-  flex-shrink: 0;
-  flex-wrap: wrap;
-  margin-bottom: 1.5rem;
-  margin-top: 1.5rem;
+.m-route-picker__routes-container {
+  flex-grow: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 1fr;
+  grid-template-areas: "all selected";
+  gap: 1rem;
+  min-height: 0;
 
-  &:empty {
-    margin-bottom: 0rem;
+  ul {
+    min-height: 0;
+    background-color: $white;
+    border: 1px solid #b3b5bd;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    margin: 0;
+    padding: 0.5rem;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    li {
+      position: relative;
+    }
+  }
+
+  p {
+    @include font-small;
+    background-color: $white;
+    border: 1px solid #b3b5bd;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    margin: 0;
+    padding: 0.5rem 0.59375rem 0 0.84375rem;
+    color: #525560;
+    line-height: calc(4 / 3);
   }
 }
 
-.m-route-picker__selected-routes-button {
-  @include button-primary;
-  margin-bottom: 0.25rem;
-  margin-right: 0.25rem;
-  min-width: 2rem;
+@mixin route-picker-button {
+  width: 100%;
+  font-size: 0.875rem;
+  font-weight: 500;
+  height: 2.25rem;
+  border-radius: 4px;
+  line-height: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &:hover,
+  &:focus {
+    font-weight: 600;
+  }
 }
 
 .m-route-picker__route-list {
-  flex: 1 1 0;
-  overflow-y: scroll;
-  margin-top: 0rem;
+  grid-area: all;
 }
 
 .m-route-picker__route-list-button {
-  margin-bottom: 0.25rem;
-  width: 100%;
-  word-break: break-word;
+  @include route-picker-button;
+  color: #3c3f4c;
+  background-color: #ecedee;
+  border: 1px solid #dbdde1;
 
-  &--selected {
-    @include button-primary;
+  &:hover {
+    color: #141524;
+    background-color: #dbdde1;
   }
 
-  &--unselected {
-    @include button-light;
-  }
-
-  &--disabled {
-    @include button-disabled;
-  }
-
-  &--with-count {
-    align-items: stretch;
-    display: flex;
-    justify-content: start;
-    padding: 0;
+  &:focus {
+    color: #141524;
+    background-color: #dbdde1;
+    border: 1px solid #b3b5bd;
   }
 }
 
-.m-route-picker__route-list-button-name,
-.m-route-picker__route-list-button-count {
-  padding: 0.3125rem 0.5rem;
+.m-route-picker__selected-routes {
+  grid-area: selected;
 }
 
-.m-route-picker__route-list-button-name {
-  flex: 1 1 auto;
-  text-align: left;
+.m-route-picker__selected-routes-button {
+  @include route-picker-button;
+  @include button-icon(0.75rem);
+  color: #f4f4f5;
+  background-color: #465863;
 
   span {
-    display: inline-block;
-    height: 1rem;
-    margin-right: 0.5rem;
-    vertical-align: top;
-    width: 1rem;
+    position: absolute;
+    top: 0.75rem;
+    right: 0.75rem;
+
+    svg {
+      stroke: #f4f4f5;
+      fill: #f4f4f5;
+    }
   }
-}
 
-.m-route-picker__route-list-button-count {
-  border-left: 1px solid $color-bg-medium;
-  display: inline-block;
-  flex: 0 0 auto;
-  font-weight: normal;
-  margin-left: 0.5rem;
-  min-width: 0.5rem;
-  padding-left: 0.3125rem;
+  &:hover {
+    background-color: #586f7c;
 
-  .m-route-picker__route-list-button--unselected & {
-    color: $color-font-grey;
+    span {
+      svg {
+        stroke: #fafafa;
+        fill: #fafafa;
+      }
+    }
+  }
+
+  &:focus-within {
+    background-color: #324450;
+    border: 1px solid #586f7c;
+
+    span {
+      svg {
+        stroke: #fafafa;
+        fill: #fafafa;
+      }
+    }
   }
 }
