--- a/assets/css/_ladder_page.scss
+++ b/assets/css/_ladder_page.scss
@@ -146,7 +146,7 @@ $color-route-tabs-separator: #9fa2ac;
   border-bottom: 1px solid #141524;
 
   button {
-    margin-right: 1rem;
+    margin: 0 1rem 0 0;
     padding-bottom: 0.375rem;
   }
 
