--- a/assets/css/_garage_filter.scss
+++ b/assets/css/_garage_filter.scss
@@ -45,16 +45,8 @@
   justify-content: center;
   align-items: center;
 
-  span {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    svg {
-      height: 0.5625rem;
-      width: 0.5625rem;
-      fill: #525560;
-    }
+  span svg {
+    fill: #525560;
   }
 }
 
