--- a/assets/css/_ladder_page.scss
+++ b/assets/css/_ladder_page.scss
@@ -6,7 +6,7 @@ $color-route-tabs-separator: #9fa2ac;
   height: 100%;
   position: relative;
   transition: $transition-slide;
-  background-color: #fafafa;
+  background-color: $color-gray-50;
 
   .m-tab-bar.hidden + & {
     margin-left: 0;
@@ -64,8 +64,8 @@ $color-route-tabs-separator: #9fa2ac;
 
 .m-ladder-page__tab-current {
   font-weight: 600;
-  color: #3c3f4c;
-  background-color: #fafafb;
+  color: $color-gray-700;
+  background-color: $color-gray-50;
   border-radius: 0.25rem 0.25rem 0 0;
 
   &:first-child {
@@ -154,7 +154,7 @@ $color-route-tabs-separator: #9fa2ac;
 .m-ladder-page__routes-presets-toggle {
   @include font-small;
   display: flex;
-  border-bottom: 1px solid #141524;
+  border-bottom: 1px solid $color-gray-900;
 
   button {
     margin: 0 1rem 0 0;
@@ -162,8 +162,8 @@ $color-route-tabs-separator: #9fa2ac;
   }
 
   .m-ladder-page__routes_picker_button_selected {
-    border-bottom: 2px inset #141524;
-    color: #141524;
+    border-bottom: 2px inset $color-gray-900;
+    color: $color-gray-900;
     font-weight: 700;
   }
 
