--- a/assets/css/_picker_container.scss
+++ b/assets/css/_picker_container.scss
@@ -1,5 +1,5 @@
 .m-picker-container {
-  background-color: #ecedee;
+  background-color: $color-gray-200;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -25,7 +25,7 @@
 
 .m-picker-container .c-drawer-tab {
   left: 100%;
-  background-color: #ecedee;
+  background-color: $color-gray-200;
 }
 
 .m-picker-container-overlay {
