--- a/assets/css/_route_filter.scss
+++ b/assets/css/_route_filter.scss
@@ -10,25 +10,25 @@
   border: 1px solid #b3b5bd;
   border-radius: 6px;
   padding: 0.625rem 1rem;
-  color: #3c3f4c;
+  color: $color-gray-700;
   font-weight: 400;
 
   &::placeholder {
     opacity: 1;
-    color: #525560;
+    color: $color-gray-600;
   }
 
   &:hover {
-    border: 1px solid #b58de2;
+    border: 1px solid $color-eggplant-400;
   }
 
   &:focus {
-    border: 1px solid #7c47ae;
+    border: 1px solid $color-eggplant-500;
     box-shadow: 0px 0px 0px 2px rgba(170, 78, 242, 0.17);
-    color: #222534;
+    color: $color-gray-800;
 
     &::placeholder {
-      color: #3c3f4c;
+      color: $color-gray-700;
     }
   }
 }
@@ -42,13 +42,13 @@
   top: 0.6875rem;
   width: 0.875rem;
   height: 0.875rem;
-  color: #525560;
+  color: $color-gray-600;
 
   &:hover {
     color: #8c909b;
   }
 
   &:focus-within {
-    color: #3c3f4c;
+    color: $color-gray-700;
   }
 }
