fix: minor tweaks based on meeting with design
* Updated gray-400, used it in a few places (garage filter, route
  filter, route picker).
* Updated gray-300, used it in border between garage filter header and
  remainder of the component
* Used gray-700 as border for incoming box
* Used gray-600 for unselected option in routes / presets toggle
* Used gray-700 as text color for tab titles
* Used gray-400 as hover color for "X" button to clear route filter
  input
* Various changes to buttons in the two columns of the route picker

--- a/assets/css/_garage_filter.scss
+++ b/assets/css/_garage_filter.scss
@@ -3,7 +3,7 @@
   font-weight: 400;
   color: $color-gray-600;
   background: $white;
-  border: 1px solid #b3b5bd;
+  border: 1px solid $color-gray-400;
   border-radius: 6px;
 
   &:hover {
@@ -27,7 +27,7 @@
   user-select: none;
 
   &:not(:only-child) {
-    border-bottom: 1px solid #d8dde1;
+    border-bottom: 1px solid $color-gray-300;
   }
 
   &:focus .m-garage-filter__show-hide-button {
