--- a/assets/css/_incoming_box.scss
+++ b/assets/css/_incoming_box.scss
@@ -6,7 +6,7 @@
   margin: 0 0.5rem;
   min-height: 2.5rem;
   background-color: rgba(255, 255, 255, 0.5);
-  border: 2px solid #e5e7eb;
+  border: 2px solid $color-gray-300;
 }
 
 .m-incoming-box__vehicle {
