--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -64,8 +64,8 @@ $color-gray-800: #222534;
 $color-gray-700: #3c3f4c;
 $color-gray-600: #525560;
 $color-gray-500: #6f7380;
-$color-gray-400: #9295a0;
-$color-gray-300: #cacdd3;
+$color-gray-400: #b3b5bd;
+$color-gray-300: #d8dde1;
 $color-gray-200: #ecedee;
 $color-gray-100: #f4f4f5;
 $color-gray-50: #fafafa;
