Replace hardcoded colors with variables (#1480)
* chore: add new colors to CSS

* chore: first pass at replacing hex literals with color variables

* fix: minor tweaks based on meeting with design

* Updated gray-400, used it in a few places (garage filter, route
  filter, route picker).
* Updated gray-300, used it in border between garage filter header and
  remainder of the component
* Used gray-700 as border for incoming box
* Used gray-600 for unselected option in routes / presets toggle
* Used gray-700 as text color for tab titles
* Used gray-400 as hover color for "X" button to clear route filter
  input
* Various changes to buttons in the two columns of the route picker

--- a/assets/css/_ladder_page.scss
+++ b/assets/css/_ladder_page.scss
@@ -6,7 +6,7 @@ $color-route-tabs-separator: #9fa2ac;
   height: 100%;
   position: relative;
   transition: $transition-slide;
-  background-color: #fafafa;
+  background-color: $color-gray-50;
 
   .m-tab-bar.hidden + & {
     margin-left: 0;
@@ -46,7 +46,7 @@ $color-route-tabs-separator: #9fa2ac;
 
 .m-ladder-page__tab {
   @include font-small;
-  color: #6e717d;
+  color: $color-gray-700;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   margin-top: 0.375rem;
@@ -64,8 +64,7 @@ $color-route-tabs-separator: #9fa2ac;
 
 .m-ladder-page__tab-current {
   font-weight: 600;
-  color: #3c3f4c;
-  background-color: #fafafb;
+  background-color: $color-gray-50;
   border-radius: 0.25rem 0.25rem 0 0;
 
   &:first-child {
@@ -154,7 +153,7 @@ $color-route-tabs-separator: #9fa2ac;
 .m-ladder-page__routes-presets-toggle {
   @include font-small;
   display: flex;
-  border-bottom: 1px solid #141524;
+  border-bottom: 1px solid $color-gray-900;
 
   button {
     margin: 0 1rem 0 0;
@@ -162,13 +161,13 @@ $color-route-tabs-separator: #9fa2ac;
   }
 
   .m-ladder-page__routes_picker_button_selected {
-    border-bottom: 2px inset #141524;
-    color: #141524;
+    border-bottom: 2px inset $color-gray-900;
+    color: $color-gray-900;
     font-weight: 700;
   }
 
   .m-ladder-page__routes_picker_button_unselected {
-    color: #4f535f;
+    color: $color-gray-600;
     font-weight: 400;
   }
 }
