--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -19,6 +19,57 @@ $color-secondary-dark: #4db6ac;
 $color-secondary-medium: #b8dbd9;
 $color-secondary-light: #d4e7e7;
 
+$color-strawberry-900: #4b0828;
+$color-strawberry-800: #6d0937;
+$color-strawberry-700: #9c074d;
+$color-strawberry-600: #d73367;
+$color-strawberry-500: #ea5382;
+$color-strawberry-400: #f698ae;
+$color-strawberry-300: #f5bcc8;
+$color-strawberry-200: #f8d8dc;
+$color-strawberry-100: #fbeaea;
+$color-strawberry-50: #fcf3f3;
+$color-eggplant-900: #1a083f;
+$color-eggplant-800: #260f54;
+$color-eggplant-700: #451b83;
+$color-eggplant-600: #6229a3;
+$color-eggplant-500: #7c47ae;
+$color-eggplant-400: #b58de2;
+$color-eggplant-300: #d0b1f2;
+$color-eggplant-200: #e2d3f2;
+$color-eggplant-100: #f3ecf9;
+$color-eggplant-50: #f8f5f9;
+$color-kiwi-900: #022d40;
+$color-kiwi-800: #103f4a;
+$color-kiwi-700: #0a5961;
+$color-kiwi-600: #1b7979;
+$color-kiwi-500: #269c95;
+$color-kiwi-400: #76cbc0;
+$color-kiwi-300: #b7e6de;
+$color-kiwi-200: #daf1ea;
+$color-kiwi-100: #edf8f4;
+$color-kiwi-50: #f4faf8;
+$color-lemon-900: #372815;
+$color-lemon-800: #6b541f;
+$color-lemon-700: #98800b;
+$color-lemon-600: #c3c022;
+$color-lemon-500: #dddf5d;
+$color-lemon-400: #e8ee77;
+$color-lemon-300: #eef6b1;
+$color-lemon-200: #f4facc;
+$color-lemon-100: #fafde8;
+$color-lemon-50: #fbfdf1;
+$color-gray-900: #141524;
+$color-gray-800: #222534;
+$color-gray-700: #3c3f4c;
+$color-gray-600: #525560;
+$color-gray-500: #6f7380;
+$color-gray-400: #b3b5bd;
+$color-gray-300: #d8dde1;
+$color-gray-200: #ecedee;
+$color-gray-100: #f4f4f5;
+$color-gray-50: #fafafa;
+
 $color-button-simple: $color-component-light;
 $color-button-simple-focus: $color-secondary-medium;
 $color-button-primary: $color-primary;
