--- a/assets/css/_route_picker.scss
+++ b/assets/css/_route_picker.scss
@@ -22,7 +22,7 @@
   ul {
     min-height: 0;
     background-color: $white;
-    border: 1px solid #b3b5bd;
+    border: 1px solid $color-gray-400;
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
     margin: 0;
@@ -40,12 +40,12 @@
   p {
     @include font-small;
     background-color: $white;
-    border: 1px solid #b3b5bd;
+    border: 1px solid $color-gray-400;
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
     margin: 0;
     padding: 0.5rem 0.59375rem 0 0.84375rem;
-    color: #525560;
+    color: $color-gray-600;
     line-height: calc(4 / 3);
   }
 }
@@ -73,19 +73,19 @@
 
 .m-route-picker__route-list-button {
   @include route-picker-button;
-  color: #3c3f4c;
-  background-color: #ecedee;
-  border: 1px solid #dbdde1;
+  color: $color-gray-700;
+  background-color: $color-gray-200;
+  border: 1px solid $color-gray-400;
 
   &:hover {
-    color: #141524;
-    background-color: #dbdde1;
+    color: $color-gray-900;
+    background-color: $color-gray-300;
   }
 
   &:focus {
-    color: #141524;
-    background-color: #dbdde1;
-    border: 1px solid #b3b5bd;
+    color: $color-gray-900;
+    background-color: $color-gray-300;
+    border: 1px solid $color-gray-500;
   }
 }
 
@@ -96,8 +96,9 @@
 .m-route-picker__selected-routes-button {
   @include route-picker-button;
   @include button-icon(0.75rem);
-  color: #f4f4f5;
-  background-color: #465863;
+  color: $color-gray-100;
+  background-color: $color-primary-dark;
+  border: 1px solid $color-gray-400;
 
   span {
     position: absolute;
@@ -105,30 +106,32 @@
     right: 0.75rem;
 
     svg {
-      stroke: #f4f4f5;
-      fill: #f4f4f5;
+      stroke: $color-gray-100;
+      fill: $color-gray-100;
     }
   }
 
   &:hover {
-    background-color: #586f7c;
+    color: $color-gray-50;
+    background-color: $color-primary;
 
     span {
       svg {
-        stroke: #fafafa;
-        fill: #fafafa;
+        stroke: $color-gray-50;
+        fill: $color-gray-50;
       }
     }
   }
 
   &:focus-within {
     background-color: #324450;
-    border: 1px solid #586f7c;
+    color: $color-gray-50;
+    border: 1px solid $color-primary;
 
     span {
       svg {
-        stroke: #fafafa;
-        fill: #fafafa;
+        stroke: $color-gray-50;
+        fill: $color-gray-50;
       }
     }
   }
