chore: initial structuring / layout for left nav

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -29,6 +29,8 @@ $shuttle-picker-width: 12.6rem;
 @import "loading_spinner";
 @import "minischedule";
 @import "modal";
+@import "nav";
+@import "nav/left_nav";
 @import "notifications";
 @import "notification_bell_icon";
 @import "notification_content";
