--- a/assets/css/nav/_left_nav.scss
+++ b/assets/css/nav/_left_nav.scss
@@ -1,15 +1,50 @@
 .m-left-nav {
-  width: 11.5rem;
-  height: 100%;
+  width: calc(11.5rem + 1px);
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+  height: 100%;
+  position: relative;
 
   background-color: $color-gray-50;
 
   border-right: 1px solid $color-gray-300;
-  border-top: 1px solid $color-gray-300;
+  padding: 1.5rem 1rem;
 }
 
 .m-left-nav--collapsed {
   width: 4.25rem;
+}
+
+.m-left-nav__links {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: calc(100% + 1px);
+  margin: 0;
+}
+
+.m-left-nav__link {
+  @include button-icon(1rem);
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  padding: 0.5rem 0.625rem;
+  box-sizing: border-box;
+  width: 100%;
+  height: 2.25rem;
+
+  font-weight: 400;
+  @include font-body;
+  color: $color-gray-600;
+  text-decoration: none;
+}
+
+.m-left-nav__link--active {
+  border-radius: 0.375rem;
+  background: $color-eggplant-100;
+
+  font-weight: 500;
+  color: $color-eggplant-800;
 }
