--- a/assets/css/nav/_left_nav.scss
+++ b/assets/css/nav/_left_nav.scss
@@ -39,12 +39,18 @@
   @include font-body;
   color: $color-gray-600;
   text-decoration: none;
-}
 
-.m-left-nav__link--active {
-  border-radius: 0.375rem;
-  background: $color-eggplant-100;
+  &:hover {
+    background-color: $color-gray-100;
+    color: $color-gray-700;
+    font-weight: 500;
+  }
 
-  font-weight: 500;
-  color: $color-eggplant-800;
+  &.m-left-nav__link--active {
+    border-radius: 0.375rem;
+    background-color: $color-eggplant-100;
+
+    font-weight: 500;
+    color: $color-eggplant-800;
+  }
 }
