fix: .c-page CSS only includes margin when next to old TabBar

--- a/assets/css/_page.scss
+++ b/assets/css/_page.scss
@@ -1,7 +1,10 @@
 .c-page {
   height: 100%;
-  margin-left: $tab-bar-width;
   overflow: scroll;
+
+  .m-tab-bar ~ & {
+    margin-left: $tab-bar-width;
+  }
 }
 
 .c-page__container {
