--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -2,8 +2,10 @@
   display: grid;
   gap: 0;
   grid-template-columns: max-content minmax(0, 1fr);
-  grid-template-rows: 1fr;
-  grid-template-areas: "left content";
+  grid-template-rows: max-content minmax(0, 1fr);
+  grid-template-areas:
+    "top top"
+    "left content";
   width: 100%;
   height: 100%;
 }
@@ -14,6 +16,10 @@
 
 .m-nav__nav-bar--left {
   grid-area: left;
+}
+
+.m-nav__nav-bar--top {
+  grid-area: top;
 }
 
 .m-nav__app-content {
