--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -31,6 +31,7 @@ $shuttle-picker-width: 12.6rem;
 @import "modal";
 @import "nav";
 @import "nav/left_nav";
+@import "nav/top_nav";
 @import "notifications";
 @import "notification_bell_icon";
 @import "notification_content";
