chore: add environment variable to config and frontend
Using "environment" rather than "env" for consistency with sentry documentation https://docs.sentry.io/platforms/rust/guides/actix-web/configuration/options/

--- a/lib/skate_web/templates/layout/_sentry.html.eex
+++ b/lib/skate_web/templates/layout/_sentry.html.eex
@@ -1,5 +1,6 @@
 <script>
   window.sentry = {
-    dsn: "<%= Application.get_env(:skate, :sentry_frontend_dsn) %>"
+    dsn: "<%= Application.get_env(:skate, :sentry_frontend_dsn) %>",
+    environment: "<%= Application.get_env(:skate, :sentry_environment) %>"
   }
 </script>
