--- a/assets/css/nav/_top_nav.scss
+++ b/assets/css/nav/_top_nav.scss
@@ -15,7 +15,9 @@
 .m-top-nav__logo {
   width: 2.5rem;
   height: 1.5rem;
+}
 
+.m-top-nav__logo-icon {
   svg {
     fill: $color-eggplant-900;
     stroke: $color-eggplant-900;
