--- a/assets/css/_ladder_page.scss
+++ b/assets/css/_ladder_page.scss
@@ -144,6 +144,7 @@ $color-route-tabs-separator: #9fa2ac;
   flex-direction: column;
   justify-content: center;
   padding-left: 0.65625rem;
+  cursor: default;
 
   .m-ladder-page__add-tab-icon {
     padding-top: 0.375rem;
