fix: change link element to button in SwingsView

--- a/assets/css/_swings_view.scss
+++ b/assets/css/_swings_view.scss
@@ -134,9 +134,8 @@
     justify-content: flex-end;
     align-items: center;
 
-    a {
+    button {
       text-decoration-line: underline;
-      cursor: pointer;
     }
   }
 }
