fix: bell icon circle interaction with hover state

--- a/assets/css/nav/_top_nav.scss
+++ b/assets/css/nav/_top_nav.scss
@@ -82,6 +82,11 @@
         fill: $color-eggplant-700;
         stroke: none;
       }
+
+      circle {
+        fill: $color-strawberry-500;
+        stroke: $color-strawberry-500;
+      }
     }
   }
 }
