--- a/assets/css/_notification_drawer.scss
+++ b/assets/css/_notification_drawer.scss
@@ -12,6 +12,10 @@
 
   @media screen and (max-width: $mobile-max-width) {
     width: 100vw;
+
+    .m-nav__app-content & {
+      width: 100%;
+    }
   }
 }
 
