--- a/assets/css/_properties_panel.scss
+++ b/assets/css/_properties_panel.scss
@@ -13,6 +13,10 @@
 
   @media screen and (max-width: $mobile-max-width) {
     width: 100vw;
+
+    .m-nav__app-content & {
+      width: 100%;
+    }
   }
 }
 
