--- a/assets/css/_input_modal.scss
+++ b/assets/css/_input_modal.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
   position: fixed;
   left: 50%;
   top: 50%;
@@ -14,11 +13,18 @@
   border-radius: 0.25rem;
   line-height: 1.125rem;
 
+  & > :not(:last-child) {
+    margin-bottom: 1rem;
+  }
+
   form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+
+    & > :not(:last-child) {
+      margin-bottom: 1rem;
+    }
   }
 }
 
@@ -64,7 +70,10 @@
 
 .m-input-modal__buttons {
   display: flex;
-  gap: 1rem;
+
+  & > :not(:last-child) {
+    margin-right: 1rem;
+  }
 }
 
 @mixin input-modal-button {
